--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^0.16.2",
     "cheerio": "^1.0.0-rc.2",
     "express": "^4.15.4",
+    "firebase-admin": "^5.2.1",
     "request": "^2.81.0"
   }
 }
